--- a/po/it.po
+++ b/po/it.po
@@ -104,10 +104,10 @@
 # Luca Ferretti <elle.uca@infinito.it>, 2004, 2005, 2006, 2007, 2008, 2009, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: gstreamer 0.10.29.2\n"
+"Project-Id-Version: gstreamer 0.10.30.3\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/\n"
-"POT-Creation-Date: 2010-09-23 20:57+0100\n"
-"PO-Revision-Date: 2010-06-29 10:06+0200\n"
+"POT-Creation-Date: 2010-10-29 14:08+0100\n"
+"PO-Revision-Date: 2010-10-25 10:03+0200\n"
 "Last-Translator: Luca Ferretti <elle.uca@infinito.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "Language: it\n"
@@ -122,7 +122,7 @@ msgstr "Stampa la versione di GStreamer"
 
 # --gst-fatal-warnings
 msgid "Make all warnings fatal"
-msgstr "Rende critici tutti i warning"
+msgstr "Rende tutti i warning critici"
 
 # --gst-debug-help
 msgid "Print available debug categories and exit"
@@ -272,7 +272,7 @@ msgid "Could not configure supporting library."
 msgstr "Impossibile configurare la libreria di supporto."
 
 msgid "Encoding error."
-msgstr ""
+msgstr "Errore nel codificare."
 
 msgid "GStreamer encountered a general resource error."
 msgstr "GStreamer ha incontrato un errore generico di risorse."
@@ -308,7 +308,7 @@ msgid "Could not synchronize on resource."
 msgstr "Impossibile sincronizzarsi sulla risorsa."
 
 msgid "Could not get/set settings from/on resource."
-msgstr "Impossibile ottenere/regolare le impostazioni dalla/della risorsa."
+msgstr "Impossibile ottenere/regolare le impostazioni della risorsa."
 
 msgid "No space left on the resource."
 msgstr "Niente spazio sulla risorsa."
@@ -425,13 +425,12 @@ msgstr "data"
 msgid "date the data was created (as a GDate structure)"
 msgstr "la data in cui i dati sono stati creati (come struttura GDate)"
 
-#, fuzzy
 msgid "datetime"
-msgstr "data"
+msgstr "data/ora"
 
-#, fuzzy
 msgid "date and time the data was created (as a GstDateTime structure)"
-msgstr "la data in cui i dati sono stati creati (come struttura GDate)"
+msgstr ""
+"la data e l'ora in cui i dati sono stati creati (come struttura GstDateTime)"
 
 msgid "genre"
 msgstr "genere"
@@ -783,12 +782,11 @@ msgstr ""
 "una località all'interno di una città in cui il contenuto multimediale è "
 "stato registrato o prodotto (p.e. il quartiere)"
 
-#, fuzzy
 msgid "geo location horizontal error"
-msgstr "nome località geog."
+msgstr "errore orizzontale località geog."
 
 msgid "expected error of the horizontal positioning measures (in meters)"
-msgstr ""
+msgstr "errore atteso delle misure di posizionamento orizzontale (in metri)"
 
 msgid "geo location movement speed"
 msgstr "velocità movimento località geog."
@@ -905,20 +903,19 @@ msgid "Model of the device used to create this media"
 msgstr ""
 "il modello del dispositivo usato per creare questo contenuto multimediale"
 
-#, fuzzy
 msgid "application name"
-msgstr "nome località geog."
+msgstr "nome applicazione"
 
-#, fuzzy
 msgid "Application used to create the media"
-msgstr ""
-"il modello del dispositivo usato per creare questo contenuto multimediale"
+msgstr "l'applicazione usata per creare il contenuto multimediale"
 
 msgid "application data"
-msgstr ""
+msgstr "dati applicazione"
 
 msgid "Arbitrary application data to be serialized into the media"
 msgstr ""
+"i dati arbitrari dell'applicazione da serializzare all'interno del contenuto "
+"multimediale"
 
 msgid "image orientation"
 msgstr "orientamento immagine"
@@ -1110,13 +1107,13 @@ msgid "controllable"
 msgstr "controllabile"
 
 msgid "changeable in NULL, READY, PAUSED or PLAYING state"
-msgstr ""
+msgstr "può passare allo stato  NULL, READY, PAUSED o PLAYING"
 
 msgid "changeable only in NULL, READY or PAUSED state"
-msgstr ""
+msgstr "può passare solo allo stato  NULL, READY o PAUSED"
 
 msgid "changeable only in NULL or READY state"
-msgstr ""
+msgstr "può passare solo allo stato  NULL o READY"
 
 msgid "Blacklisted files:"
 msgstr "File nella blacklist:"
